--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="CheeseHacks 2022" />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:image"
+      content="https://cheesehacks.webdevuw.org/api/files/cheesehacks_main.jpg"
+    />
+    <meta property="og:url" content="https://cheesehacks.webdevuw.org" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="icon" href="/api/files/favicon.ico" sizes="any" />
+    <!-- REVISED (Nov 8)! -->
+    <link rel="apple-touch-icon" href="/api/files/apple-touch-icon.png" />
     <title>CheeseHacks</title>
-</head>
-<body style="background-color: #f0f0f0">
+  </head>
+  <body style="background-color: #f0f0f0">
     <div id="root"></div>
     <script defer src="bundle.js"></script>
-</body>
+  </body>
 </html>
