started work on dynamic user table

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <meta property="og:title" content="CheeseHacks 2022" />
     <meta property="og:type" content="article" />
     <meta
+      name="description"
+      content="CheeseHacks is a 24-hour hackathon that takes place over a fall weekend on the UW-Madison Campus. We bring together students interested in designing software such as web or mobile applications, but you can work on any technology project you can think of! We encourage you to work together with a team to compete for prizes and awards from our sponsors."
+    />
+    <meta
       property="og:image"
       content="https://cheesehacks.webdevuw.org/api/files/cheesehacks_main.jpg"
     />
