--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="icon" href="/api/files/favicon.ico" sizes="any" />
     <!-- REVISED (Nov 8)! -->
     <link rel="apple-touch-icon" href="/api/files/apple-touch-icon.png" />
